更新抖音去广告去水印，禁用哔哩哔哩排行

--- a/Loon_Script.conf
+++ b/Loon_Script.conf
@@ -38,10 +38,10 @@ http-response ^https:\/\/claritywallpaper\.com\/clarity\/api\/(userInfo|special\
 http-response ^https?:\/\/vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/vsco.js,tag=VSCO滤镜
 
 # > JAV101无限观看
-http-response ^https\:\/\/pwaapi\.gao1gps\.cn\/v1\/user\/info requires-body=1,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/JAV101.js
+http-response ^https\:\/\/pwaapi\.gao1gps\.cn\/v1\/user\/info requires-body=1,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/JAV101.js,tag=JAV101无限观看
 
 # > 黄瓜视频
-http-response https:\/\/api1000\.cvxia\.com\/(user\/info|mov\/browse2*) requires-body=1,script-path=https://raw.githubusercontent.com/JungegeCN/JGG/master/hgsp.js
+http-response https:\/\/api1000\.cvxia\.com\/(user\/info|mov\/browse2*) requires-body=1,script-path=https://raw.githubusercontent.com/JungegeCN/JGG/master/hgsp.js,tag=黄瓜视频
 
 
 
@@ -62,7 +62,7 @@ http-response ^https?://m.client.10010.com/uniAdmsInterface/getHomePageAd requir
 # > # 哔哩哔哩Pro  哔哩哔哩 精简&去广告 开启1080P+
 http-response ^https?:\/\/api\.bilibili\.com\/pgc\/player\/api\/playurl requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/bilifj.js,tag=哔哩哔哩番剧开启1080P+
 # Up主收藏排行榜
-http-response https://app.bilibili.com/x/v2/space\?access_key requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20space.js,tag=哔哩哔哩Up收藏排行榜
+# http-response https://app.bilibili.com/x/v2/space\?access_key requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20space.js,tag=哔哩哔哩Up收藏排行榜
 # 首页Tab
 http-response https://app.bilibili.com/x/resource/show/tab\?access_key requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20tab.js,tag=哔哩哔哩首页Tab
 http-response https://app.bilibili.com/x/v2/feed/index\?access_key requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20feed.js
@@ -75,14 +75,8 @@ http-response https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoo
 # > YouTube 
 http-request ^https://[\s\S]*\.googlevideo\.com/.*&(oad|ctier) script-path=https://Choler.github.io/Surge/Script/YouTube.js,tag=YouTube去广告
 
-# > 抖音 Remove Ad & Logo
-http-response ^https?:\/\/aweme\.snssdk\.com\/aweme/v1/aweme\/post\/ script-path=https://Choler.github.io/Surge/Script/douyin.js, requires-body=true, timeout=10, tag=抖音_post
-http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/feed\/ script-path=https://Choler.github.io/Surge/Script/douyin.js, requires-body=true, timeout=10, tag=抖音_feed.js
-http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/follow\/feed\/ script-path=https://Choler.github.io/Surge/Script/douyin.js, requires-body=true, timeout=10, tag=抖音_follow.js
-http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/nearby\/feed\/ script-path=https://Choler.github.io/Surge/Script/douyin.js, requires-body=true, timeout=10, tag=抖音_nearby.js
-http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/search\/item\/ script-path=https://Choler.github.io/Surge/Script/douyin.js, requires-body=true, timeout=10, tag=抖音_item
-http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/general\/search\/single\/ script-path=https://Choler.github.io/Surge/Script/douyin.js, requires-body=true, timeout=10, tag=抖音_search
-http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/hot\/search\/video\/list\/ script-path=https://Choler.github.io/Surge/Script/douyin.js, requires-body=true, timeout=10, tag=抖音_hot
+# > 抖音 Remove Ad & Logo       需配合URL Rewrite使用 
+http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ requires-body=1,max-size=-1,script-path=https://Choler.github.io/Surge/Script/douyin.js
 
 # > 知乎 去广告
 http-response https://api.zhihu.com/moments/recommend requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20feed.js,tag=知乎
