--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -27,9 +27,7 @@ cron "42,46 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script
 cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.js,tag=苏宁易购签到
 
 # > 中国联通
-#1打开 APP , 进入签到页面, 系统提示: `获取刷新链接: 成功`,然后手动签到 1 次
-#2首页>天天抽奖, 系统提示 `2` 次: `获取Cookie: 成功 (登录抽奖)` 和 `获取Cookie: 成功 (抽奖次数)`
-cron "4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.js,tag=中国联通
+cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.js,tag=中国电信
 
 # > 52破解--浏览器访问并登录https://www.52pojie.cn
 cron "4 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js,tag=52破解签到
