--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -26,7 +26,7 @@ cron "42,46 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script
 # > 苏宁易购
 cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.js,tag=苏宁易购签到
 
-# > 中国联通
+# > 中国电信
 cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.js,tag=中国电信
 
 # > 52破解--浏览器访问并登录https://www.52pojie.cn
