--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -59,10 +59,10 @@ cron "7 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/ma
 cron "7 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi.js, tag=滴滴打车
 
 # > 115摇一摇
-cron "7 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/115/115.js, tag=115摇一摇
+#cron "7 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/115/115.js, tag=115摇一摇
 
 # > 小黑盒
-cron "8 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/heybox/heybox.js, tag=小黑盒
+#cron "8 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/heybox/heybox.js, tag=小黑盒
 
 # > 人人视频
 cron "10 10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js,tag=人人签到
