--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -1,8 +1,11 @@
 # 按需求自己选择和修改时间
 # 定时脚本
 
+# > 京豆查询
+cron "10 8 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_bean_change.js,tag=京豆查询
+
 # > 会话切换
-cron "45,48 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js,tag=会话切换
+cron "41,43,45 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js,tag=会话切换
 
 # > 机场签到
 cron "10 1 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkin_env.js,tag=机场签到
@@ -21,7 +24,7 @@ cron "2 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/mas
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.js,tag=腾讯视频签到
 
 # > 爱奇艺
-cron "42,46 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,tag=爱奇艺签到
+cron "42,44,46 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,tag=爱奇艺签到
 
 # > 苏宁易购
 cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.js,tag=苏宁易购签到
@@ -70,4 +73,5 @@ cron "10 10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/sc
 # > wps(签到时间调整为 06:00 - 13:00 之间)
 cron "9 6 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wps/wps.js, tag=wps
 
-
+# > 京东星推官
+ cron "2 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_xtg.js,tag=京东星推官
