--- a/Loon_Cookie.conf
+++ b/Loon_Cookie.conf
@@ -3,7 +3,7 @@
 # 您可以在使用后手动将其禁用，以免产生不必要的MITM.
 # 更新时间20.09.04  14点54分
 
-hostname = passport.biligame.com, *.bilibili.com, api.m.jd.com, *.video.qq.com, iface?.iqiyi.com, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com, wapside.189.cn, www.52pojie.cn, music.163.com, m.ctrip.com, tieba.baidu.com, h5.ele.me, i.meituan.com, api.weibo.cn, pay.sc.weibo.com, as.xiaojukeji.com, proapi.115.com, api.xiaoheihe.cn, *.rr.tv, zt.wps.cn
+hostname = passport.biligame.com, *.bilibili.com, api.m.jd.com, *.video.qq.com, iface?.iqiyi.com, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com, wapside.189.cn, www.52pojie.cn, music.163.com, m.ctrip.com, tieba.baidu.com, h5.ele.me, i.meituan.com, api.weibo.cn, pay.sc.weibo.com, as.xiaojukeji.com, *.smzdm.com, mobwsa.ximalaya.com, sf-integral-sign-in.weixinjia.net, mcs-mimp-web.sf-express.com, *.rr.tv, zt.wps.cn
 
 # > B站漫画获取cookie    passport.biligame.com
 http-request ^https:\/\/passport\.biligame\.com\/api\/login\/sso.+?version%22%3A%22(3|4|5) max-size=0,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Bilibili-DailyBonus/Manga.js
@@ -54,11 +54,15 @@ http-request https:\/\/pay\.sc\.weibo\.com\/aj\/mobile\/home\/welfare\/signin\/d
 # > 滴滴打车获取cookie     as.xiaojukeji.com
 http-request ^https:\/\/as\.xiaojukeji\.com\/ep\/as\/toggles\? script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi.js
 
-# > 115摇一摇获取cookie    proapi.115.com
-http-request ^https?:\/\/proapi\.115\.com\/ios\/user\/takespc\? script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/115/115.js
+# > 什么值得买获取cookie     *.smzdm.com
+http-request ^https:\/\/www\.smzdm\.com\/?.? script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/smzdm/smzdm.cookie.js
 
-# > 小黑盒获取cookie       api.xiaoheihe.cn
-http-request ^https:\/\/api\.xiaoheihe\.cn\/account\/home_v\d\/\? script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/heybox/heybox.js
+# 喜马拉雅获取cookie         mobwsa.ximalaya.com
+http-request ^https?:\/\/.*\/mobile\-user\/homePage\/.* script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/ximalaya/ximalaya.cookie.js
+
+# 顺丰速运获取cookie          sf-integral-sign-in.weixinjia.net, mcs-mimp-web.sf-express.com
+http-request ^https:\/\/sf-integral-sign-in.weixinjia.net\/app\/index script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/sfexpress/sfexpress.cookie.js
+http-request ^https:\/\/mcs-mimp-web.sf-express.com\/mcs-mimp\/share\/(.*?)Redirect script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/sfexpress/sfexpress.cookie.js
 
 # > 人人视频获取cookie      *.rr.tv
 http-request ^https:\/\/api\.rr\.tv\/user\/profile script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.cookie.js
