--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -1,18 +1,15 @@
 # 按需求自己选择和修改时间
 # 定时脚本
 
-# > 京豆查询
-cron "10 8 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_bean_change.js,tag=京豆查询
-
 # > 会话切换
-cron "41,43,45 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js,tag=会话切换
+cron "43,45,47 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js,tag=会话切换
 
 # > 机场签到
-cron "10 1 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkin_env.js,tag=机场签到
+cron "35 8 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkin_env.js,tag=机场签到
 
 # > B站直播--打开浏览器访问: https://www.bilibili.com 或 https://live.bilibili.com
-cron "20 0 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.js,tag=B站直播
-cron "40 0 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.silver2coin.js,tag=银瓜子转硬币
+cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.js,tag=B站直播
+cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.silver2coin.js,tag=银瓜子转硬币
 
 # > B站漫画
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Bilibili-DailyBonus/Manga.js,tag=B站漫画
@@ -21,10 +18,10 @@ cron "1 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/mas
 cron "2 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js,tag=京东签到
 
 # > 腾讯视频--手机浏览器访问并登录: https://film.qq.com/
-cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.js,tag=腾讯视频签到
+cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.js,tag=腾讯视频签到
 
 # > 爱奇艺
-cron "40,42,44 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,tag=爱奇艺签到
+cron "42 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,tag=爱奇艺签到
 
 # > 苏宁易购
 cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.js,tag=苏宁易购签到
@@ -39,7 +36,7 @@ cron "4 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/mas
 cron "4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.js,tag=网易云签到
 
 # > 携程旅行
-cron "3 0 * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/ctrip.js,tag=携程签到
+cron "4 0 * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/ctrip.js,tag=携程签到
 
 # > 百度贴吧--吃三顿应该饱了
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.js,tag=百度贴吧1
@@ -61,17 +58,20 @@ cron "7 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/ma
 # > 滴滴打车
 cron "7 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi.js, tag=滴滴打车
 
-# > 115摇一摇
-#cron "7 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/115/115.js, tag=115摇一摇
+# > 什么值得买
+cron "7 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/smzdm/smzdm.js,tag=什么值得买
 
-# > 小黑盒
-#cron "8 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/heybox/heybox.js, tag=小黑盒
+# > 顺丰速运
+cron "8 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/sfexpress/sfexpress.js,tag= 顺丰速运
+
+# > 喜马拉雅
+cron "8 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/ximalaya/ximalaya.js,tag=喜马拉雅
 
 # > 人人视频
-cron "10 10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js,tag=人人签到
+cron "11 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js,tag=人人签到
 
 # > wps(签到时间调整为 06:00 - 13:00 之间)
-cron "9 6 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wps/wps.js, tag=wps
+cron "10 8 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wps/wps.js, tag=wps
 
 # > 京东星推官
- cron "2 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_xtg.js,tag=京东星推官
+ cron "30 0 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/scripts/master/jd_xtg.js,tag=京东星推官
