--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -38,7 +38,7 @@ cron "4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/script
 # > 携程旅行
 cron "4 0 * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/ctrip.js,tag=携程签到
 
-# > 百度贴吧--吃三顿应该饱了
+# > 百度贴吧
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.js,tag=百度贴吧1
 
 # > 饿了么  
@@ -73,5 +73,3 @@ cron "11 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scrip
 # > wps(签到时间调整为 06:00 - 13:00 之间)
 cron "10 8 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wps/wps.js, tag=wps
 
-# > 京东星推官
- cron "30 0 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_xtg.js,tag=京东星推官
