--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -15,45 +15,48 @@ cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/script
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Bilibili-DailyBonus/Manga.js,tag=B站漫画
 
 # > 京东--浏览器登录 https://bean.m.jd.com
-cron "2 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js,tag=京东签到
+cron "2 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js,tag=京东
+# > 京东抽奖
+cron "2 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_lotteryMachine.js,tag=京东抽奖
+
 
 # > 腾讯视频--手机浏览器访问并登录: https://film.qq.com/
-cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.js,tag=腾讯视频签到
+cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.js,tag=腾讯视频
 
 # > 爱奇艺
-cron "42,44 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,tag=爱奇艺签到
+cron "42,44 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,tag=爱奇艺
 
 # > 苏宁易购
-cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.js,tag=苏宁易购签到
+cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.js,tag=苏宁易购
 
 # > 中国电信
 cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.js,tag=中国电信
 
 # > 52破解--浏览器访问并登录https://www.52pojie.cn
-cron "4 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js,tag=52破解签到
+cron "4 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js,tag=52破解
 
 # > 网易云音乐-浏览器访问并登录: https://music.163.com/m/login
-cron "4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.js,tag=网易云签到
+cron "4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.js,tag=网易云
 
 # > 携程旅行
-cron "4 0 * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/ctrip.js,tag=携程签到
+cron "4 0 * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/ctrip.js,tag=携程
 
 # > 百度贴吧
-cron "5 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.js,tag=百度贴吧1
+cron "5 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.js,tag=百度贴吧
 
 # > 饿了么  
-cron "6 0 * * *" script-path=https://raw.githubusercontent.com/songyangzz/QuantumultX/master/elem/elemSign.js,tag=饿了么签到
-cron "6 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/elem/elemCheckIn.js,tag=饿了么打卡
+cron "6 0 * * *" script-path=https://raw.githubusercontent.com/songyangzz/QuantumultX/master/elem/elemSign.js,tag=饿了么
+cron "6 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/elem/elemCheckIn.js,tag=饿了么-打卡领红包
 
 # 美团没有外卖
 #打开 APP , 然后手动签到 1 次, (`首页` > `红包签到`)
-cron "6 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.js,tag=美团签到
+cron "6 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.js,tag=美团
 
 # > 微博 & 微博钱包
 #1.打开微博App获取Cookie.获取后请注释或禁用Cookie
 #2.打开微博钱包点击签到，获取Cookie，
 #3.钱包已经签到无法获取
-cron "7 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js,tag=微博&钱包签到
+cron "7 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js,tag=微博&钱包
 
 # > 滴滴打车
 cron "7 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi.js, tag=滴滴打车
@@ -71,5 +74,5 @@ cron "8 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/script
 cron "11 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js,tag=人人签到
 
 # > wps(签到时间调整为 06:00 - 13:00 之间)
-cron "10 8 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wps/wps.js, tag=wps
+cron "10 8 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wps/wps.js, tag=wps签到
 
