--- a/Loon_Script.conf
+++ b/Loon_Script.conf
@@ -3,7 +3,7 @@
 #需配合主机名共同使用
 
 
-hostname = *.xiaoxiao*.com, *.rr.tv, *.lagoapps.com, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, bkcd.b-cdn.net, souhu.mett.me, ayk.tmdidi.com, m.pearkin.com, www.baidu.com2.club, api.meiyan.com, viva.v21xy.com, api.picsart.c*, api.meiease.c*, mp.weixin.qq.com, *.snssdk.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.bilibili.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, *.amemv.com, aweme.snssdk.com, ios.prod.ftl.netflix.com, *.115.com, claritywallpaper.com, vsco.co, api.zhihu.com, api.*.cn, m.client.10010.com, api1000.cvxia.com
+hostname = *.xiaoxiao*.com, *.rr.tv, *.lagoapps.com, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, bkcd.b-cdn.net, souhu.mett.me, ayk.tmdidi.com, m.pearkin.com, www.baidu.com2.club, api.meiyan.com, viva.v21xy.com, api.picsart.c*, api.meiease.c*, mp.weixin.qq.com, *.snssdk.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.bilibili.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, ios.prod.ftl.netflix.com, *.115.com, claritywallpaper.com, vsco.co, api.*.cn, m.client.10010.com, api1000.cvxia.com
 
 #破解vip脚本
 # > 小小影视
@@ -44,7 +44,6 @@ http-response ^https\:\/\/pwaapi\.gao1gps\.cn\/v1\/user\/info requires-body=1,sc
 http-response https:\/\/api1000\.cvxia\.com\/(user\/info|mov\/browse2*) requires-body=1,script-path=https://raw.githubusercontent.com/JungegeCN/JGG/master/hgsp.js,tag=黄瓜视频
 
 
-
 #去广告及水印 评分类
 # > 微信公众号
 http-request ^https://mp\.weixin\.qq\.com/mp/getappmsgad script-path=https://Choler.github.io/Surge/Script/WeChat.js,tag=微信公众号广告
@@ -72,16 +71,6 @@ http-response https://app.bilibili.com/x/v2/view\?access_key requires-body=1,max
 http-response https://api.bilibili.com/x/v2/reply/main\?access_key requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20reply.js
 http-response https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20live.js,tag=哔哩哔哩直播
 
-
-# > 抖音 Remove Ad & Logo       需配合URL Rewrite使用 
-http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ requires-body=1,max-size=-1,script-path=https://Choler.github.io/Surge/Script/douyin.js
-
-# > 知乎 去广告
-http-response https://api.zhihu.com/moments/recommend requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20feed.js,tag=知乎
-http-response https://api.zhihu.com/topstory/recommend requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20recommend.js,tag=知乎
-http-response https://api.zhihu.com/v4/questions requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20answer.js,tag=知乎
-http-response https://api.zhihu.com/people/ requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20people.js,tag=知乎
-
 # > 奈飞评分
 http-request ^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D script-path=https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js,tag=奈飞评分1
 http-response ^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js,tag=奈飞评分2
@@ -89,11 +78,3 @@ http-response ^https?://ios\.prod\.ftl\.netflix\.com/iosui/warmer/.+type=show-at
 
 # > 京东比价
 http-response ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) script-path=https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js, requires-body=true, timeout=10, tag=京东比价
-
-# > 115离线
-http-response ^http:\/\/115\.com\/lx.*$ requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/115lx.js,tag=115离线
-http-response ^https?:\/\/webapi\.115\.com\/user\/check_sign.*$ requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/ikanam/Surge-Scripts/master/115lx.js,tag=115离线
-
-# > 卧龙影视去启动广告
-http-response http://(w001.tgmmvip.com|api.wolong.tv|.*)/(wolong/ad/(splash|banner)|app/php/api/ad/) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/Alex0510/Eric/master/surge/Script/wolongad.js,tag=卧龙影视
-
