--- a/Loon_Cookie.conf
+++ b/Loon_Cookie.conf
@@ -27,6 +27,8 @@ http-request ^https:\/\/gameapi.suning.com\/sngame-web\/(api\/signin\/private\/c
 
 # > 中国电信获取cookie   wapside.189.cn
 http-request ^https:\/\/wapside.189.cn:9001\/api\/home\/homeInfo script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.cookie.js,requires-body=true
+# > 电信金豆兑换话费
+http-request ^https:\/\/wapside.189.cn:9001\/api\/exchange\/consum script-path=https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dianx.js,requires-body=true
 
 # > 52破解获取Cookie     www.52pojie.cn
 http-request https:\/\/www\.52pojie\.cn\/home\.php\? script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js
