--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -31,6 +31,8 @@ cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/script
 
 # > 中国电信
 cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.js,tag=中国电信
+# > 电信金豆兑换话费
+cron "0 10 */3 * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.js,tag=电信金豆兑换话费
 
 # > 52破解--浏览器访问并登录https://www.52pojie.cn
 cron "4 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js,tag=52破解
