--- a/Loon_Script.conf
+++ b/Loon_Script.conf
@@ -3,12 +3,11 @@
 #需配合主机名共同使用
 
 
-hostname = *.xiaoxiao*.com, *.rr.tv, *.lagoapps.com, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, bkcd.b-cdn.net, souhu.mett.me, ayk.tmdidi.com, m.pearkin.com, www.baidu.com2.club, api.meiyan.com, viva.v21xy.com, api.picsart.c*, api.meiease.c*, mp.weixin.qq.com, *.snssdk.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.bilibili.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, ios.prod.ftl.netflix.com, *.115.com, claritywallpaper.com, vsco.co, api.*.cn, m.client.10010.com, api1000.cvxia.com
+hostname = *.xiaoxiao*.com, *.xxjjappss.com, *.*.mob.com, *.rr.tv, *.lagoapps.com, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, bkcd.b-cdn.net, souhu.mett.me, ayk.tmdidi.com, m.pearkin.com, www.baidu.com2.club, api.meiyan.com, api.xiuxiu.meitu.com, mp.weixin.qq.com, *.snssdk.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.bilibili.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, ios.prod.ftl.netflix.com, *.115.com, claritywallpaper.com, m.client.10010.com
 
 #破解vip脚本
 # > 小小影视
-http-response https:\/\/.*\/getGlobalData requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/Alex0510/Eric/master/surge/Script/xxysad.js,tag=小小影视AD
-http-response https:\/\/.*\.xiaoxiao.*\.com\/(vod\/reqplay\/|ucp/index|getGlobalData) requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/xxys.js,tag=小小影视VIP
+https:\/\/.*\..*\.com\/(vod\/reqplay\/|ucp/index|getGlobalData) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/xxys.js,tag=小小影视
 
 # > 人人视频-需旧版本app
 http-response ^https:\/\/api\.rr\.tv(\/user\/privilege\/list|\/ad\/getAll|\/rrtv-video\/v4plus\/season\/detail) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/rrtv.js,tag=人人视频AI原画
@@ -20,29 +19,16 @@ http-response ^https?:\/\/.+\.(my10api|(.*91.*))\.(com|tips|app|xyz)(:\d{2,5})?\
 http-response ^https?:\/\/.*\.(lago|fuli|xiang(jiao|xiang))apps\.com\/(ucp\/index|getGlobalData|.+\/reqplay\/) requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/xjsp.js,tag=香蕉视频
 
 # > Pear 雪梨
-http-response ^https:\/\/(www\.baidu.com2\.club|ayk\.tmdidi\.com|m\.pearkin\.com|souhu\.mett\.me|bkcd\.b-cdn\.net)\/(api\/movie\/WatchMovie|api\/Account\/CheckVip|api\/account\/IndexDetail) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/bywang1314/quanx/master/pear.js,tag=Pear雪梨
+http-response ^https:\/\/(www\.baidu.com2\.club|ayk\.tmdidi\.com|m\.pearkin\.com|souhu\.mett\.me|bkcd\.b-cdn\.net)\/(api\/movie\/WatchMovie|api\/Account\/CheckVip|api\/account\/IndexDetail) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/bywang1314/Scripts/main/pear.js,tag=Pear雪梨
 
-# > 美颜相机
-http-response ^https:\/\/api\.meiyan\.com\/iap\/verify\.json requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/myxj.js,tag=美颜相机
+# > 美颜相机 v9.6.20版本
+http-response ^https:\/\/api\.meiyan\.com\/vip\/user_info requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/bywang1314/Scripts/main/Meiyanxiangji.js,tag=美图秀秀
 
-# > 小影
-http-response ^https:\/\/viva\.v21xy\.com\/api\/rest\/u\/vip requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/vivavideo.js,tag=小影
-
-# > PicsArt美易 pro
-http-response ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/PicsArt.js,tag=PicsArt美易
+# > 美图秀秀 v9.0.51版本
+^https:\/\/api\.xiuxiu\.meitu\.com\/v1\/user\/show\.json requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/bywang1314/Scripts/main/mtxx.js,tag=美颜相机
 
 # > 克拉壁纸(旧版4.7.3)
 http-response ^https:\/\/claritywallpaper\.com\/clarity\/api\/(userInfo|special\/queryByCatalogAll) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/clarity.js,tag=克拉壁纸
-
-# > VSCO滤镜VIP
-http-response ^https?:\/\/vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/vsco.js,tag=VSCO滤镜
-
-# > JAV101无限观看
-http-response ^https\:\/\/pwaapi\.gao1gps\.cn\/v1\/user\/info requires-body=1,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/JAV101.js,tag=JAV101无限观看
-
-# > 黄瓜视频
-http-response https:\/\/api1000\.cvxia\.com\/(user\/info|mov\/browse2*) requires-body=1,script-path=https://raw.githubusercontent.com/JungegeCN/JGG/master/hgsp.js,tag=黄瓜视频
-
 
 #去广告及水印 评分类
 # > 微信公众号
