--- a/Loon_Script.conf
+++ b/Loon_Script.conf
@@ -27,7 +27,7 @@ http-response ^https:\/\/api\.meiyan\.com\/vip\/user_info requires-body=1,max-si
 # > 美图秀秀 v9.0.51版本
 ^https:\/\/api\.xiuxiu\.meitu\.com\/v1\/user\/show\.json requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/bywang1314/Scripts/main/mtxx.js,tag=美颜相机
 
-# > 克拉壁纸(旧版4.7.3)
+# > 克拉壁纸 v4.7.3版本
 http-response ^https:\/\/claritywallpaper\.com\/clarity\/api\/(userInfo|special\/queryByCatalogAll) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/clarity.js,tag=克拉壁纸
 
 #去广告及水印 评分类
