--- a/Loon_Cookie.conf
+++ b/Loon_Cookie.conf
@@ -74,5 +74,6 @@ http-request ^https:\/\/api\.rr\.tv\/user\/profile script-path=https://raw.githu
 http-request ^https:\/\/zt.wps.cn\/2018\/docer_check_in\/api\/act_list script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wps/wps.cookie.js
 
 # 小米运动获取Token
-http-response ^https:\/\/account\.huami\.com\/v2\/client\/login script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/backUp/xmSports.js, requires-body=true, timeout=3600
+http-response ^https:\/\/account\.huami\.com\/v2\/client\/login script-path=https://raw.githubusercontent.com/bywang1314/Scripts/main/xmSports.js, requires-body=true, timeout=3600
+
 
