--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -79,7 +79,7 @@ cron "11 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scrip
 cron "10 8 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wps/wps.js, tag=wps签到
 
 # > 小米运动
-cron "15 20 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/backUp/xmSports.js, tag=小米运动
+cron "15 20 * * *" script-path=https://raw.githubusercontent.com/bywang1314/Scripts/main/xmSports.js, tag=小米运动
 
 # > 赚京豆小程序
 cron "30 18 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_zjd.js, tag=半自动领京豆
