--- a/Loon_Cookie.conf
+++ b/Loon_Cookie.conf
@@ -3,7 +3,7 @@
 # 您可以在使用后手动将其禁用，以免产生不必要的MITM.
 # 更新时间20.09.04  14点54分
 
-hostname = passport.biligame.com, *.bilibili.com, api.m.jd.com, *.video.qq.com, iface?.iqiyi.com, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com, wapside.189.cn, www.52pojie.cn, music.163.com, m.ctrip.com, tieba.baidu.com, h5.ele.me, i.meituan.com, api.weibo.cn, pay.sc.weibo.com, as.xiaojukeji.com, *.smzdm.com, mobwsa.ximalaya.com, sf-integral-sign-in.weixinjia.net, mcs-mimp-web.sf-express.com, *.rr.tv, zt.wps.cn, account.huami.com
+hostname = passport.biligame.com, *.bilibili.com, api.m.jd.com, *.video.qq.com, iface?.iqiyi.com, wapside.189.cn:9001, www.52pojie.cn, music.163.com, m.ctrip.com, tieba.baidu.com, h5.ele.me, i.meituan.com, api.weibo.cn, pay.sc.weibo.com, as.xiaojukeji.com, mobwsa.ximalaya.com, *.rr.tv, zt.wps.cn, account.huami.com
 
 # > B站漫画获取cookie    passport.biligame.com
 http-request ^https:\/\/passport\.biligame\.com\/api\/login\/sso.+?version%22%3A%22(3|4|5) max-size=0,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Bilibili-DailyBonus/Manga.js
@@ -18,12 +18,6 @@ http-request ^https:\/\/access.video.qq.com\/user\/auth_refresh script-path=http
 
 # > 爱奇艺获取cookie     iface?.iqiyi.com
 http-request ^https?:\/\/iface\d\.iqiyi\.com\/ script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
-
-# > 苏宁易购获取cookie   passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com
-http-request ^https:\/\/passport.suning.com\/ids\/login$ script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.cookie.js, requires-body=true
-http-request ^https:\/\/luckman.suning.com\/luck-web\/sign\/api\/clock_sign.do script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.cookie.js
-http-request ^https:\/\/sign.suning.com\/sign-web\/m\/promotion\/sign\/doSign.do script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.cookie.js
-http-request ^https:\/\/gameapi.suning.com\/sngame-web\/(api\/signin\/private\/customerSignOperation.do|gateway\/api\/queryPrize.do) script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.cookie.js
 
 # > 中国电信获取cookie   wapside.189.cn
 http-request ^https:\/\/wapside.189.cn:9001\/api\/home\/homeInfo script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.cookie.js,requires-body=true
@@ -54,18 +48,10 @@ http-request https:\/\/api\.weibo\.cn\/\d\/video\/machine\?gsid script-path=http
 http-request https:\/\/pay\.sc\.weibo\.com\/aj\/mobile\/home\/welfare\/signin\/do\? script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js
 
 # > 滴滴打车获取cookie     as.xiaojukeji.com
-http-request ^https:\/\/as\.xiaojukeji\.com\/ep\/as\/toggles\? script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi.js
-
-# > 什么值得买获取cookie     *.smzdm.com
-http-request ^https?:\/\/zhiyou\.smzdm\.com\/user$ script-path=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_checkin.js,requires-body=true
-http-request ^https?:\/\/user-api\.smzdm\.com\/user_login\/normal$ script-path=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_checkin.js,requires-body=true
+http-request ^https:\/\/as\.xiaojukeji\.com\/ep\/as\/toggles\? script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js
 
 # 喜马拉雅获取cookie         mobwsa.ximalaya.com
 http-request ^https?:\/\/.*\/mobile\-user\/homePage\/.* script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/ximalaya/ximalaya.cookie.js
-
-# 顺丰速运获取cookie          sf-integral-sign-in.weixinjia.net, mcs-mimp-web.sf-express.com
-http-request ^https:\/\/sf-integral-sign-in.weixinjia.net\/app\/index script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/sfexpress/sfexpress.cookie.js
-http-request ^https:\/\/mcs-mimp-web.sf-express.com\/mcs-mimp\/share\/(.*?)Redirect script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/sfexpress/sfexpress.cookie.js
 
 # > 人人视频获取cookie      *.rr.tv
 http-request ^https:\/\/api\.rr\.tv\/user\/profile script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.cookie.js
