--- a/Loon_Cookie.conf
+++ b/Loon_Cookie.conf
@@ -3,7 +3,7 @@
 # 您可以在使用后手动将其禁用，以免产生不必要的MITM.
 # 更新时间20.09.04  14点54分
 
-hostname = passport.biligame.com, *.bilibili.com, api.m.jd.com, *.video.qq.com, iface?.iqiyi.com, wapside.189.cn:9001, www.52pojie.cn, music.163.com, m.ctrip.com, tieba.baidu.com, h5.ele.me, i.meituan.com, api.weibo.cn, pay.sc.weibo.com, as.xiaojukeji.com, mobwsa.ximalaya.com, *.rr.tv, zt.wps.cn, account.huami.com
+hostname = passport.biligame.com, *.bilibili.com, api.m.jd.com, *.video.qq.com, iface?.iqiyi.com, wapside.189.cn:9001, www.52pojie.cn, music.163.com, m.ctrip.com, tieba.baidu.com, i.meituan.com, api.weibo.cn, pay.sc.weibo.com, as.xiaojukeji.com, mobwsa.ximalaya.com, zt.wps.cn, account.huami.com
 
 # > B站漫画获取cookie    passport.biligame.com
 http-request ^https:\/\/passport\.biligame\.com\/api\/login\/sso.+?version%22%3A%22(3|4|5) max-size=0,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Bilibili-DailyBonus/Manga.js
@@ -36,9 +36,6 @@ http-request https:\/\/m\.ctrip\.com\/restapi\/soa2\/14946\/json\/userBaseInfo s
 # > 百度贴吧获取cookie    tieba.baidu.com
 http-request ^https?:\/\/tieba\.baidu\.com\/?.? script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.cookie.js
 
-# > 饿了么获取cookie      h5.ele.me
-http-request ^https:\/\/h5\.ele\.me\/restapi\/eus\/v\d\/current_user$ script-path=https://raw.githubusercontent.com/songyangzz/QuantumultX/master/elem/elemGetCookies.js
-
 # > 美团获取cookie        i.meituan.com
 http-request ^https:\/\/i.meituan.com\/evolve\/signin\/signpost\/ script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.cookie.js,requires-body=true
 
@@ -52,9 +49,6 @@ http-request ^https:\/\/as\.xiaojukeji\.com\/ep\/as\/toggles\? script-path=https
 
 # 喜马拉雅获取cookie         mobwsa.ximalaya.com
 http-request ^https?:\/\/.*\/mobile\-user\/homePage\/.* script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/ximalaya/ximalaya.cookie.js
-
-# > 人人视频获取cookie      *.rr.tv
-http-request ^https:\/\/api\.rr\.tv\/user\/profile script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.cookie.js
 
 # > WPS获取cookie          zt.wps.cn
 http-request ^https:\/\/zt.wps.cn\/2018\/docer_check_in\/api\/act_list script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wps/wps.cookie.js
