--- a/Loon_Script.conf
+++ b/Loon_Script.conf
@@ -3,7 +3,7 @@
 #需配合主机名共同使用
 
 
-hostname = *.xiaoxiao*.com, *.xxjjappss.com, *.*.mob.com, *.rr.tv, *.lagoapps.com, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, bkcd.b-cdn.net, souhu.mett.me, ayk.tmdidi.com, m.pearkin.com, www.baidu.com2.club, api.meiyan.com, api.xiuxiu.meitu.com, *.snssdk.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.bilibili.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, ios.prod.ftl.netflix.com, *.115.com, claritywallpaper.com, m.client.10010.com
+hostname = *.xiaoxiao*.com, *.xxjjappss.com, *.*.mob.com, *.rr.tv, *.lagoapps.com, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, bkcd.b-cdn.net, souhu.mett.me, ayk.tmdidi.com, m.pearkin.com, www.baidu.com2.club, *.snssdk.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.bilibili.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, ios.prod.ftl.netflix.com, *.115.com, claritywallpaper.com, m.client.10010.com, api.revenuecat.com
 
 #破解vip脚本
 # > 小小影视
@@ -21,14 +21,11 @@ http-response ^https?:\/\/.*\.(lago|fuli|xiang(jiao|xiang))apps\.com\/(ucp\/inde
 # > Pear 雪梨
 http-response ^https:\/\/(www\.baidu.com2\.club|ayk\.tmdidi\.com|m\.pearkin\.com|souhu\.mett\.me|bkcd\.b-cdn\.net)\/(api\/movie\/WatchMovie|api\/Account\/CheckVip|api\/account\/IndexDetail) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/bywang1314/Scripts/main/pear.js,tag=Pear雪梨
 
-# > 美颜相机 v9.6.20版本
-http-response ^https:\/\/api\.meiyan\.com\/vip\/user_info requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/bywang1314/Scripts/main/Meiyanxiangji.js,tag=美图秀秀
-
-# > 美图秀秀 v9.0.51版本
-^https:\/\/api\.xiuxiu\.meitu\.com\/v1\/user\/show\.json requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/bywang1314/Scripts/main/mtxx.js,tag=美颜相机
+# > vsco v220.0
+http-response ^https:\/\/api\.revenuecat\.com\/v\d\/subscribers\/\d+$ requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/bywang1314/Scripts/main/vsco.js,tag=vsco
 
 # > 克拉壁纸 v4.7.3版本
-http-response ^https:\/\/claritywallpaper\.com\/clarity\/api\/(userInfo|special\/queryByCatalogAll) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/clarity.js,tag=克拉壁纸
+http-response ^https:\/\/claritywallpaper\.com\/clarity\/api\/(userInfo|special\/queryByCatalogAll) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/bywang1314/Scripts/main/clarity.js,tag=克拉壁纸
 
 #去广告及水印 评分类
 # > 皮皮虾 
